fixed footer showing over quiz on mobile view

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,6 +12,7 @@
 
   display: flex;
   align-items: center;
+  flex-direction: column;
 
   background-image: url("../images/background.png");
 }
@@ -49,20 +50,26 @@
 }
 
 footer {
-  position: fixed;
   height: 2vh;
-  bottom: 0;
-  left: 0;
-  right: 0;
 
   padding-bottom: 2rem;
   text-align: center;
 
   color: #cecece;
+
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .container {
     width: 90%;
+  }
+
+  footer {
+    margin-top: 2rem;
+    position: initial;
   }
 }
